--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,9 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
+  },
+  "dependencies": {
+    "restangular": "^1.5.2",
+    "lodash": "^4.15.0"
   }
 }
